# GAME

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  README.me
src/: AnimatedObject.cpp  AnimatedObject.hpp  Game.cpp  Game.hpp  GameObject.hpp  Player.cpp  Player.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Utility.cpp  glad.c  glad.h  main.cpp
src/shaders/: fragment_shader_1.glsl  vertex_shader_1.glsl
